# kirikiri-speed-controller

./: .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  CMakeLists.txt  README.md  README_en.md  README_zh-CN.md  agentlog.md  guide.md
cmake/: dual_arch.cmake
src/common/: AudioStreamProcessor.cpp  AudioStreamProcessor.h  DspPipeline.cpp  DspPipeline.h  Logging.cpp  Logging.h  SharedSettings.h  VoiceContext.h  ui_texts.yaml
src/core/: ControllerCore.cpp  ControllerCore.h  main.cpp  ui.cpp  ui.h
src/gui/: main.cpp  ui.cpp  ui.h
src/hook/: DirectSoundHook.cpp  DirectSoundHook.h  FMODHook.cpp  FMODHook.h  HookUtils.cpp  HookUtils.h  ModuleScan.cpp  ModuleScan.h  WwiseHook.cpp  WwiseHook.h  XAudio2Hook.cpp  XAudio2Hook.h  dllmain.cpp
src/injector/: injector_main.cpp
tests/: dsp_smoke.cpp
